# CPP_Project_Template

./: .clang-tidy  CMakeLists.txt
include/: hello.h
src/: hello.cpp  main.cpp  mainwindow.cpp  mainwindow.h
